Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.10
* Fixes for permissions for exchangerate table (Erik H)
* Fixes for POS cashier permissions.  (Chris T)
* More Localization Fixes (Herman V)
* Customer/Vendor Search now shows records without credit accounts (Herman V)

Changelog for 1.3.9
* More logging enhancements (Herman V)
* Translation fixes in tax form reports (Chris T)
* Added accidently omitted 1099 forms (Chris T)
* Fixed formatting issue in sales_quotation.tex (Chris T)
* Better localization handling on logout (Herman V)
* Better handling of successive logouts (Herman V)
* Correcting some erroneous errors on db setup (Herman V)
* Corrected error message in old handler (Herman V)
* Reduced warnings in logs (Herman V and Chris T)
* Corrected "Not a CODE reference" in payment processing (Herman V)
* Corrected year/month not working on payment dropdowns (Herman V)
* Can now be installed via RPM. (Chris T)

Chris T is Chris Travers
Herman V is Herman Vierendeels

Changelog for 1.3.8:
* Fixed duplicate key error saving taxes (Herman V)
* Fixed not null violation when inserting bank acct w/o bic (Chris T)
* Corrected fkey violation when attaching file to order (Chris T)
* Moved language input on customer/vendor form for better display (Chris T)
* Corrected binmode handling on templates (Herman V and Chris T)
* File.sql now loads transactionally (Chris T)
* OE no longer requires type input for editing orders/quotations (Chris T)
* Fixed  "no such file or directory found" error when logging db tasks (David B)
* Logging improvements (Herman V)
* Fixed company fax being printed under shipto (Herman V)
* Fixed "File does not exist... [object HTMLButtonElement]" js error (Herman V)
* Fixed timecard template headers not showing company name, etc (Chris T)
* Fixed part account mappings broken after upgrade from 1.2 (Chris T)
* Fixed quotation number increasing when saving existing quotation (Chris T)