@@ -57,6 +57,25 @@ sub login {
             company_name => $request->{database},
                 password => $creds->{password}}
     );
+    my $server_info = $database->server_version;
+    my @sv_info = split '.', $server_info;
+    if (($sv_info[0] > 9)or ($sv_info[0]  == 9 and $sv_info[1] >= 1)){
+       if (! -f "$ENV{PG_CONTRIB_DIR}/tablefunc.control"){
+            $request->error($request->{_locale}->text(
+                      'Cannot find Contrib scripts in [_1].',
+                      $ENV{PG_CONTRIB_DIR}
+            ));
+       }
+    } else {
+       if (! -f "$ENV{PG_CONTRIB_DIR}/tablefunc.sql"){
+            $request->error($request->{_locale}->text(
+                      'Cannot find Contrib scripts in [_1].',
+                      $ENV{PG_CONTRIB_DIR}
+            ));
+      
+       }
+    }
+    
     my $version_info = $database->get_info();
     if(!$request->{dbh}){$request->{dbh}=$database->{dbh};}#allow upper stack to disconnect dbh when leaving
     $request->{login_name} = $version_info->{username};
